--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,8 @@ classifiers = [
   "Operating System :: OS Independent",
 ]
 requires-python = ">=3.7"
+
+[tool.pytest.ini_options]
+# AsyncIO‑Plugin: strikte Loop‑Policy und function‑Scope für async Fixtures
+asyncio_mode = "strict"
+asyncio_default_fixture_loop_scope = "function"
