--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,8 @@ requires-python = ">=3.7"
 # AsyncIO‑Plugin: strikte Loop‑Policy und function‑Scope für async Fixtures
 asyncio_mode = "strict"
 asyncio_default_fixture_loop_scope = "function"
+addopts = """
+    --benchmark-autosave
+    --benchmark-save-data
+    --benchmark-json=benchmark_results.json
+"""
