--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ exceptiongroup==1.2.2
 execnet==2.1.1
 iniconfig==2.1.0
 Jinja2==3.1.6
-MarkupSafe==3.0.2
+MarkupSafe<3.0.0
 packaging==24.2
 pluggy==1.5.0
 py-cpuinfo==9.0.0
